--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="index">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-  <header>
+  <header class="color_gris">
     <div class="header__box"> 
-    <nav class="navbar navbar-expand-lg ">
+     <nav class="navbar navbar-expand-lg letras_blancas">
       <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img with="425px" height="70" src="src\img\logo.png" alt="Gloryhammer Logo"/>
@@ -26,50 +26,124 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link hover" href="#">MUSICA</a>
+            <a class="nav-link hover" href="https://open.spotify.com/artist/7dkEByOe0oHqc54qU4hwzV" target="_blank">MUSICA</a>
             <a class="nav-link hover" href="#">LA BANDA</a>
             <a class="nav-link hover" href="#">LORE</a>
             <a class="nav-link hover" href="#">TOUR</a>
-            <a class="nav-link hover" href="#">TIENDAS</a>
+            <a class="nav-link hover" href="https://napalmrecords.com/deutsch/gloryhammer" target="_blank">TIENDAS</a>
           </div>
         </div>
       </div>
-      </nav>
+     </nav>
     </div>
-
   </header>
-
+<!-- width="1120" height="630" margin="100px"-->
+<!-- ratio-16x9 w-100 h-100 -->
   <main>
-    <div class="carrucel">
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <div id="carouselExampleIndicators" class="carousel slide h-100" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <iframe width="1120" height="630" src="https://www.youtube.com/embed/-O5TxWQkfr0?start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+              </div>
+              <div class="carousel-item">
+                <iframe width="1120" height="630" src="https://www.youtube.com/embed/BkUAzcja74Y?start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              <div class="carousel-item">
+                <iframe width="1120" height="630" src="https://www.youtube.com/embed/VTW30Q4B3Go?start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <iframe width="1120" height="630" margin="100px" src="https://www.youtube.com/embed/-O5TxWQkfr0?start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
-          <div class="carousel-item">
-            <iframe width="1120" height="630" margin="100px" src="https://www.youtube.com/embed/BkUAzcja74Y?start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
-          <div class="carousel-item">
-            <iframe width="1120" height="630" margin="100px" src="https://www.youtube.com/embed/VTW30Q4B3Go?start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-
     </div>
+      
 
+
+
+   
+
+   <footer class="color_gris">
+    <!-- <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <div class="redes">
+            <a href="https://www.facebook.com/gloryhammer" target="_blank">
+             <img class="redes_icono" src="src/img/facebook .png" alt="página de facebook">   
+            </a>
+            <a href="https://www.instagram.com/gloryhammerofficial/" target="_blank">
+                <img class="redes_icono" src="src/img/instagram.png" alt="página de instagram">
+            </a>
+            <a href="mailto:BAND@GLORYHAMMER.COM" target="_blank">
+                <img class="redes_icono" src="src/img/email.png" alt="Correo electrónico">
+            </a>
+            </div>
+          </div>
+        </div>
+      
+        <div class="col">
+          2 of 2
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          1 of 3
+        </div>
+        <div class="col">
+          <div class="foot2 letras_blancas">
+            <img src="src\img\logo.png" alt="logoFooter" width="350" height="85">
+            <div>
+                <p>Copyright 2023, Todos los derechos reservados   —   Politica de Privacidad</p>
+            </div>
+        </div>
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+    </div>
+  </div> -->
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-12">
+        <div class="redes">
+          <a href="https://www.facebook.com/gloryhammer" target="_blank">
+           <img class="redes_icono" src="src/img/facebook .png" alt="página de facebook">   
+          </a>
+          <a href="https://www.instagram.com/gloryhammerofficial/" target="_blank">
+              <img class="redes_icono" src="src/img/instagram.png" alt="página de instagram">
+          </a>
+          <a href="mailto:BAND@GLORYHAMMER.COM" target="_blank">
+              <img class="redes_icono" src="src/img/email.png" alt="Correo electrónico">
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="foot2 letras_blancas">
+          <img src="src\img\logo.png" alt="logoFooter" width="300" height="80">
+          <div>
+              <p>Copyright 2023, Todos los derechos reservados   —   Politica de Privacidad</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+   </footer>
   </main>
 
 </body>
