--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
      </nav>
     </div>
   </header>
-<!-- width="1120" height="630" margin="100px"-->
-<!-- ratio-16x9 w-100 h-100 -->
   <main>
+    <!-- no agregar padding de ningùn tipo o intentar centrar sin el grid de bootstrap o se rompe todo y so se porque-->
     <div class="container text-center">
       <div class="row">
         <div class="col">
