arreglado problema en mobile de tamaño

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       
 
 
-    <div class="container-fluid text-center descripciones">
+    <div class="container text-center descripciones">
       <!-- agnus -->
       <div class="row agnus ">
         <div class="col">
