Index finalizado, procedo a musica

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </header>
   <main>
-    <!-- no agregar padding de ningùn tipo o intentar centrar sin el grid de bootstrap o se rompe todo y so se porque-->
+    <!-- no agregar padding de ningùn tipo o intentar centrar sin el grid de bootstrap o se rompe todo y no se porque-->
     <div class="container text-center">
       <div class="row">
         <div class="col">
@@ -80,9 +80,9 @@
       
 
 
-    <div class="container text-center descripciones">
+    <div class="container text-center mt-2 mb-2 descripciones">
       <!-- agnus -->
-      <div class="row agnus ">
+      <div class="row agnus p-3">
         <div class="col">
           <h3>
             Agnus McFife
@@ -95,16 +95,16 @@
             His betrothed is princess Iona McDougall.
           </p>
         </div>
-        <div class="col">
-          <img class="w-50 h-100" src="src\img\agnus.jpg" alt="agnus mcfife">
+        <div class="col-sm-12 col-lg-6 ">
+          <img class="w-50 h-100 p-3" src="src\img\agnus.jpg" alt="agnus mcfife">
         </div>
       </div>
       <!-- ralathor -->
-      <div class="row ralathor ">
-        <div class="col-sm-12 col-md-6">
-          <img class="w-50 h-100" src="src\img\ralathor.jpg" alt="Ralathor">
+      <div class="row ralathor p-3 ">
+        <div class="col-sm-12 col-lg-6">
+          <img class="w-50 h-100 p-3" src="src\img\ralathor.jpg" alt="Ralathor">
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col">
           <h3>
             Ralathor
           </h3>
@@ -117,8 +117,8 @@
         </div>
       </div>
       <!-- hootsman -->
-      <div class="row hootsman ">
-        <div class="col">
+      <div class="row hootsman p-3">
+        <div class="col ">
           <h3>
             The Hootsman
           </h3>
@@ -129,8 +129,43 @@
             and the greatest movie star to ever walk the Earth.
           </p>
         </div>
+        <div class="col-sm-12 col-lg-6">
+          <img class="w-50 h-100 p-3" src="src\img\hootsman.jpg" alt="holywood hootman">
+        </div>
+      </div>
+      <!-- proletius -->
+      <div class="row proletius p-3 ">
+        <div class="col-sm-12 col-lg-6">
+          <img class="w-50 h-100 p-3" src="src\img\proletius.jpg" alt="Proletius">
+        </div>
         <div class="col">
-          <img class="w-50 h-100" src="src\img\hootsman.jpg" alt="holywood hootman">
+          <h3>
+            Proletius
+          </h3>
+            <p>
+              Proletius was the Grand Master of the Knights of Crail from 980 to 1020 AD.
+              Details about the past life of the Grand master of the knights of Crail are not exactly known,
+              but what is certain is that he was strong enough to receive the title of Grand master of the
+              Knights of Crail. Unfortunately, the grandmaster Proletius died at the age of 98 in 1038 AD,
+              which was a bitter loss for the forces of light.
+            </p>
+        </div>
+      </div>
+      <!-- zargothrax -->
+      <div class="row zargothrax p-3">
+        <div class="col ">
+          <h3>
+            Zargothrax
+          </h3>
+          <p>
+            Zargothrax was an Evil wizard, arch-enemy of Angus Mcfife,
+            his descendant Angus Mcfife XIII, and the Questlords of Inverness.
+            Zargothrax began his rampage of evil after his home
+            was destroyed and he forged a pact with chaos.
+          </p>
+        </div>
+        <div class="col-sm-12 col-lg-6 p-3">
+          <img class="w-50 h-100" src="src\img\zargothrax.jpg" alt="holywood hootman">
         </div>
       </div>
       
@@ -140,7 +175,7 @@
    <footer class="color_gris">
     <div class="container-fluid text-center">
       <div class="row">
-        <div class="col-3">
+        <div class="col-sm-12 col-md-3">
           <div class="redes">
             <a href="https://www.facebook.com/gloryhammer" target="_blank">
             <img class="redes_icono" src="src/img/facebook .png" alt="página de facebook">   
@@ -153,7 +188,7 @@
             </a>
           </div>
         </div>
-        <div class="col-6 ">
+        <div class="col-sm-12 col-md-6 ">
           <div class="foot2 letras_blancas">
             <img class="imagen_footer img-fluid" src="src\img\logo.png" alt="logoFooter">
             <div>
