--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link hover" href="https://open.spotify.com/artist/7dkEByOe0oHqc54qU4hwzV" target="_blank">MUSICA</a>
+              <a class="nav-link hover" href="pages/musica.html">MUSICA</a>
               <a class="nav-link hover" href="#">LA BANDA</a>
               <a class="nav-link hover" href="#">LORE</a>
               <a class="nav-link hover" href="#">TOUR</a>
